Fix HTML formatting and update contact links

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h2>Contact Me</h2>
     <p>Email: tomartracy@gmail.com</p>
     <p>LinkedIn: https://www.linkedin.com/in/tracy-tomar/</p>
-    <p>GitHub: github.com/yourusername</p>
+    <p>GitHub: https://github.com/tracyx06/</p>
 </section>
 
 <footer>
@@ -94,3 +94,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
