--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <!-- NAVBAR -->
 <header>
     <nav class="navbar">
-        <h2 class="logo">><</h2>
+        <a href="#hero" class="logo">
+  <img src="logo_nobg.png" alt="Tracy Logo">
+</a>
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -23,15 +25,28 @@
 
 <!-- HERO SECTION -->
 <section class="hero">
-    <div class="hero-text">
-        <h1>Hi, I'm Tracy</h1>
-<h3>I am a <span class="typing"></span></h3>
-<p class="tagline">I build real projects, learn fast, and I'm actively preparing for software engineering roles.</p>
+  <div class="hero-bg"></div>
 
-        <a href="#contact" class="btn">Hire Me</a>
-        <a href="resume.pdf" class="btn resume" download>Download Resume</a>
+  <div class="hero-content">
+    <p class="intro">Hello, my name is</p>
 
+    <h1 class="name">Tracy</h1>
+
+    <h2 class="typing">
+      <span id="typing-text"></span>
+    </h2>
+
+    <p class="hero-desc">
+      Computer Science Engineering student specializing in Cloud Computing.
+      I design and build web applications, automation tools and cloud-based systems
+      using modern technologies and APIs.
+    </p>
+
+    <div class="hero-buttons">
+      <a href="#portfolio" class="btn primary">See My Work</a>
+      <a href="#contact" class="btn secondary">Contact Me</a>
     </div>
+  </div>
 </section>
 
 <!-- ABOUT -->
@@ -83,8 +98,8 @@
 <section id="contact" class="section dark">
     <h2>Contact Me</h2>
     <p>Email: tomartracy@gmail.com</p>
-    <p>LinkedIn: https://www.linkedin.com/in/tracy-tomar/</p>
-    <p>GitHub: https://github.com/tracyx06/</p>
+    <p>LinkedIn:https://www.linkedin.com/in/tracy-tomar/</p>
+    <p>GitHub:https://github.com/tracyx06//p>
 </section>
 
 <footer>
@@ -94,4 +109,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
