Enhance About Me section with detailed information
Updated the About Me section with more detailed information about my skills, projects, and internship goals.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
 <section id="about" class="section">
     <h2>About Me</h2>
     <p>
-        I am a Computer Science student specializing in Cloud Computing. I focus on building projects to understand systems deeply rather than only studying theory. Currently strengthening Data Structures & Algorithms, backend development, and databases while preparing for software engineering roles.
+        <p>
+I am a Computer Science Engineering student specializing in Cloud Computing with a strong interest in building practical, real-world software. 
+I enjoy developing web applications and backend systems, and I am particularly interested in how APIs, automation, and cloud infrastructure work together to create scalable solutions.
+I have hands-on experience working with HTML, CSS, JavaScript and currently expanding into full-stack development. I have built projects including an AI-based chatbot, a WhatsApp automation bot and implemented secure cloud access using AWS IAM roles and policies. Through these projects I learned how to design systems, debug real problems, and not just write code that runs only on my own machine.
+At the moment, I am actively improving my Data Structures & Algorithms, backend development and database skills while learning how to deploy and manage applications on the cloud. My goal is to become a developer who can design, build and deploy complete applications end-to-end rather than only working on isolated components.
+I am currently seeking internship opportunities where I can contribute, learn from experienced engineers and gain exposure to real production systems.
+</p>
 </section>
 
 <!-- SKILLS -->
@@ -109,5 +115,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
